Don't render custom emojis in code blocks

BUG: 458993